# catacomb_ii-64k

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  cat_play.c  catacomb.c  catacomb.h  catasm.c  catdefs.h  cpanel.c  objects.c  oldcat.c  pcrlib.h  pcrlib_a.c  pcrlib_c.c  rleasm.c
misc/: SDL_syssem.c  callgraph.gv
original_project/: CATACOMB.C  CATASM.ASM  OBJECTS.C  OLDCAT.C  PCRLIB.H  PCRLIB_A.ASM  PCRLIB_C.C  RLEASM.ASM  SOUNDS.H
p_m_serde/: Cargo.toml
p_m_serde/src/: builtin_types.rs  lib.rs  serialize.rs
p_m_serde_macros/: Cargo.toml
p_m_serde_macros/src/: deserialize.rs  field_data.rs  lib.rs
sdl_port_project/: cat_play.c  catacomb.c  catasm.c  cated.c  cpanel.c  ngrabca2.h  objects.c  oldcat.c  pcrlib_a.c  pcrlib_c.c  rleasm.c
serdine/: Cargo.toml
serdine/src/: builtin_types.rs  deserialize.rs  macros.rs  serialize.rs
serdine_macros/: Cargo.toml
serdine_macros/src/: bail.rs  deserialize.rs  lib.rs
source_project/: README.md  cat_play.c  catacomb.c  catdefs.h  cated.c  cpanel.c  objects.c  pcrlib.h  pcrlib_c.c
src/: active_obj.rs  cat_play.rs  catacomb-lib.rs  catacomb.rs  catasm.rs  class_type.rs  control_struct.rs  cpanel.rs  cpanel_state.rs  ctl_panel_type.rs  dir_type.rs  exit_type.rs  extra_constants.rs  extra_macros.rs  extra_types.rs  global_state.rs  gr_type.rs  input_type.rs  main.rs  obj_def_type.rs  obj_type.rs  objects.rs  pcrlib_a.rs  pcrlib_a_state.rs  pcrlib_c.rs  pcrlib_c_state.rs  pic_file_type.rs  pic_type.rs  rc_sdl.rs  rleasm.rs  safe_sdl.rs  scan_codes.rs  scores.rs  sdl_manager.rs  sdl_scan_codes.rs  semaphore.rs  sound_type.rs  spkr_table.rs  spksndtype.rs  sprite_type.rs  (+1 more)
utils/: remove_junk_data_types
