[package]
name = "catacomb"
version = "0.1.0"
edition = "2018"

[lib]
name = "catacomb_lib"
path = "src/catacomb-lib.rs"
crate-type = ["staticlib", "rlib"]

[[bin]]
path = "src/main.rs"
name = "catacomb"

[dependencies]
libc = "0.2"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2.15"
serdine = "~0"
